syntax = "proto3";
package mainframe_service;
option go_package = "superserver/domain/mainframe_service";


enum MainframePowerStatus {
    MAINFRAME_POWER_UNKNOWN = 0; // 未知状态
    MAINFRAME_POWER_OFF = 1; // 关机状态
    MAINFRAME_POWER_ON = 2;  // 开机状态
}

enum MainframeOperate {
    MAINFRAME_CLOSE = 0; // 关机
    MAINFRAME_OPEN = 1; // 开机
    MAINFRAME_DETECT = 2; // 探测
}

enum MainframePortProtocol {
    MAINFRAME_PORT_PROTOCOL_UNKNOWN = 0;
    MAINFRAME_PORT_PROTOCOL_FTPDATA = 20;
    MAINFRAME_PORT_PROTOCOL_FTPCTL = 21;
    MAINFRAME_PORT_PROTOCOL_SSH = 22;
    MAINFRAME_PORT_PROTOCOL_TELNET = 23;
    MAINFRAME_PORT_PROTOCOL_SMTP = 25;
    MAINFRAME_PORT_PROTOCOL_DNS = 53;
    MAINFRAME_PORT_PROTOCOL_DHCP = 67;
    MAINFRAME_PORT_PROTOCOL_HTTP = 80;
    MAINFRAME_PORT_PROTOCOL_POP3 = 110;
    MAINFRAME_PORT_PROTOCOL_NTP = 123;
    MAINFRAME_PORT_PROTOCOL_IMAP = 143;
    MAINFRAME_PORT_PROTOCOL_SNMP = 161;
    MAINFRAME_PORT_PROTOCOL_HTTPS = 443;
    MAINFRAME_PORT_PROTOCOL_IPSEC = 500;
    MAINFRAME_PORT_PROTOCOL_RADIUS = 1645;
    MAINFRAME_PORT_PROTOCOL_L2TP = 1701;
    MAINFRAME_PORT_PROTOCOL_PPTP = 1723;
    MAINFRAME_PORT_PROTOCOL_RDP = 3389;
}

enum MainframePortTransport {
    MAINFRAME_TRANSPORT_UNKNOWN = 0;
    MAINFRAME_TRANSPORT_TCP = 1;
    MAINFRAME_TRANSPORT_UDP = 2;
}

enum MainframePortUseType {
    MAINFRAME_PORT_USETYPE_NONE = 0; // 空
    MAINFRAME_PORT_USETYPE_DETECT = 1; // 网络探测
}
